update page title

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charSet="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Elm Starter - a starter project template for elm</title>
+  <title>簡単にOCR</title>
   <meta name="description" content="画像に簡単にOCRを行う" />
   <meta name="author" content="Raphael Megzari" />
   <meta name="robots" content="index, follow">
